--- a/index.html
+++ b/index.html
@@ -3,11 +3,82 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./style.css">
+    <link rel="icon" href="./assets/img/fav.ico">
     <title>CV</title>
 </head>
 <body>
-    <div>
-    </div>
+    <header class="header">
+        <div class="container box-top">
+            <nav class="nav">
+                <ul class="nav-list">
+                    <li class="nav-item"><a href="#contacts" class="nav-link">Contacts</a></li>
+                    <li class="nav-item"><a href="#about" class="nav-link">About Myself</a></li>
+                    <li class="nav-item"><a href="#skills" class="nav-link">Skills</a></li>
+                    <li class="nav-item"><a href="#code" class="nav-link">Code example</a></li>
+                    <li class="nav-item"><a href="#education" class="nav-link">Education</a></li>
+                    <li class="nav-item"><a href="#english" class="nav-link">English</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>    
+    <main>
+        <div class="container main-container">
+            <section class="section" id="profile">
+                <h1 class="section-title">Aleksandr Szestak</h1>
+            </section>
+            <section class="section" id="contacts">
+                <h2 class="section-title">Contacts</h2>
+
+            </section>
+            <section class="section" id="about">
+                <h2 class="section-title">About Myself</h2>
+                <p>I have always been interested in information technologies.
+                    Especially programming. Starting with Assembler, C and ending with web applications.
+                    I like to learn and develop new skills.
+                </p>
+            </section>
+            <section class="section" id="skills">
+                <h2 class="section-title">Skills</h2>
+                <ul>
+                    <li>JavaScript basics</li>
+                    <li>HTML5, CSS3</li>
+                    <li>Git/GitHub</li>
+                    <li>VSCode, Replit, Figma</li>
+                </ul>
+            </section>
+            <section class="section" id="code">
+                <h2 class="section-title">Code example</h2>
+                <code>
+                function outMax(n){<br>
+                    &nbsp;let maxSt = 0;<br>
+                    &nbsp;let a = Math.abs(n);<br>
+                    &nbsp;let c;<br>
+                    &nbsp;while (a>0){<br>
+                        &nbsp;&nbsp;c = a % 10;<br>
+                        &nbsp;&nbsp;a = (a-c) / 10;<br>
+                        &nbsp;&nbsp;maxSt++<br>
+                        &nbsp;}<br>
+                    return maxSt;<br>
+                  }<br>
+                </code>              
+            </section>
+            <section class="section" id="education">
+                <h2 class="section-title">Education</h2>
+                <ul>
+                    <li>BSUIR, Computer systems and networks</li>
+                    <li>RS School Stage0</li>
+                </ul>                
+            </section>
+            <section class="section" id="english">
+                <h2 class="section-title">English</h2>
+                <p>Level A2</p>
+            </section>
+        </div>
+    </main>
+    <footer>
+        <div class="container box-bottom">
+        </div>        
+    </footer>
 </body>
 </html>
