fix: change html,css,fonts,img

--- a/index.html
+++ b/index.html
@@ -24,9 +24,11 @@
     </header>    
     <main>
         <div class="container main-container">
+            
             <section class="section" id="profile">
-                <h1 class="section-title">Aleksandr Szestak</h1>
+                <h1 class="section-name">Aleksandr Szestak</h1>
             </section>
+
             <section class="section" id="contacts">
                 <h2 class="section-title">Contacts</h2>
 
@@ -78,6 +80,13 @@
     </main>
     <footer>
         <div class="container box-bottom">
+            <a href="https://rs.school/js/">
+            <img src="https://rs.school/images/rs_school_js.svg" alt="RS School" width="121" height="45">
+            </a>
+            <span>2022</span>
+            <div class="nav-link">
+            <a href="https://github.com/Aleksandr-Szestak">Aleksandr-Szestak</a>
+            </div>
         </div>        
     </footer>
 </body>
